// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for filename 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "main.xxxx.js",
      "size": 1105,
      "type": "asset",
    },
    {
      "chunkNames": [],
      "chunks": [
        "dynamic_js",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "dynamic_js.xxxx.js",
      "size": 138,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "main.xxxx.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": false,
      "files": [
        "dynamic_js.xxxx.js",
      ],
      "id": "dynamic_js",
      "initial": false,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "dynamic_js",
          ],
          "id": "426",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/dynamic.js",
          "issuer": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "issuerId": "10",
          "issuerName": "./index.js",
          "issuerPath": [
            {
              "id": "10",
              "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
              "name": "./index.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./dynamic.js",
          "reasons": [
            {
              "moduleId": "10",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
              "moduleName": "./index.js",
              "type": "dynamic import",
              "userRequest": "./dynamic",
            },
          ],
          "size": 32,
          "type": "module",
        },
      ],
      "names": [],
      "parents": [
        "main",
      ],
      "siblings": [],
      "size": 32,
      "type": "chunk",
    },
    {
      "children": [
        "dynamic_js",
      ],
      "entry": true,
      "files": [
        "main.xxxx.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index",
            },
          ],
          "size": 38,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 38,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "main.xxxx.js",
          "size": 1105,
        },
      ],
      "assetsSize": 1105,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "a670737f604edf10c3a5",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 38,
      "type": "module",
    },
    {
      "assets": [],
      "chunks": [
        "dynamic_js",
      ],
      "id": "426",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/dynamic.js",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./dynamic.js",
      "reasons": [
        {
          "moduleId": "10",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/filename/index.js",
          "moduleName": "./index.js",
          "type": "dynamic import",
          "userRequest": "./dynamic",
        },
      ],
      "size": 32,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "main.xxxx.js",
          "size": 1105,
        },
      ],
      "assetsSize": 1105,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/filename/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for filename 2`] = `
"PublicPath: (none)
asset main.xxxx.js 1.08 KiB {main} [emitted] (name: main)
asset dynamic_js.xxxx.js 138 bytes {dynamic_js} [emitted]
Entrypoint main 1.08 KiB = main.xxxx.js
chunk {dynamic_js} dynamic_js.xxxx.js <{main}>
  ./dynamic.js [426] {dynamic_js}
    dynamic import ./dynamic [10]
chunk {main} main.xxxx.js (main) >{dynamic_js}< [entry]
  ./index.js [10] {main}
    entry ./index
./index.js [10] {main}
  entry ./index
./dynamic.js [426] {dynamic_js}
  dynamic import ./dynamic [10]
rspack compiled successfully (a670737f604edf10c3a5)"
`;

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 9105,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index.js",
            },
          ],
          "size": 25,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 25,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 9105,
        },
      ],
      "assetsSize": 9105,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "ef20fee42a97ca5c7e58",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index.js",
        },
      ],
      "size": 25,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 9105,
        },
      ],
      "assetsSize": 9105,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/hot+production/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for hot+production 2`] = `
"PublicPath: (none)
asset bundle.js 8.89 KiB {main} [emitted] (name: main)
Entrypoint main 8.89 KiB = bundle.js
chunk {main} bundle.js (main) [entry]
  ./index.js [10] {main}
    entry ./index.js
./index.js [10] {main}
  entry ./index.js
rspack compiled successfully (ef20fee42a97ca5c7e58)"
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
      "title": "JavaScript parsing error",
    },
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
      "title": "JavaScript parsing error",
    },
  ],
  "errorsCount": 2,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 2`] = `
"error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:5
  │
1 │ let let = let;
  │     ^^^ \`let\` cannot be used as an identifier in strict mode



error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/identifier-let-strict-mode/index.js:1:11
  │
1 │ let let = let;
  │           ^^^ \`let\` cannot be used as an identifier in strict mode



rspack compiled with 2 errors"
`;

exports[`StatsTestCases should print correct stats for ignore-plugin 1`] = `
{
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "size": 103,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "208",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals/en.js",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
      "issuerId": "941",
      "issuerName": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/index.js",
          "name": "./index.js",
        },
        {
          "id": "941",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
          "name": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./locals/en.js",
      "size": 30,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "665",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals/./zh",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
      "issuerId": "941",
      "issuerName": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/index.js",
          "name": "./index.js",
        },
        {
          "id": "941",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
          "name": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals/./zh (missing)",
      "size": 160,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "136",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals/./zh.js",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
      "issuerId": "941",
      "issuerName": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/index.js",
          "name": "./index.js",
        },
        {
          "id": "941",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
          "name": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals/./zh.js (missing)",
      "size": 160,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "239",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/ignore-plugin/./globalIndex.js",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/./globalIndex.js (missing)",
      "size": 160,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "941",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" }",
      "size": 160,
      "type": "module",
    },
  ],
}
`;

exports[`StatsTestCases should print correct stats for ignore-plugin 2`] = `
"./index.js [10] {main}
./locals/en.js [208] {main}
<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals/./zh (missing) [665] {main}
<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals/./zh.js (missing) [136] {main}
<PROJECT_ROOT>/tests/statsCases/ignore-plugin/./globalIndex.js (missing) [239] {main}
<PROJECT_ROOT>/tests/statsCases/ignore-plugin/locals|None|None|ContextOptions { mode: Sync, recursive: true, reg_exp: RspackRegex { algo: Regress(Regex { cr: CompiledRegex { insns: [StartOfLine, ByteSeq2([46, 47]), Loop1CharBody { min_iters: 0, max_iters: 18446744073709551615, greedy: true }, MatchAnyExceptLineTerminator, EndOfLine, Goal], brackets: [], start_pred: Arbitrary, loops: 0, groups: 0, named_group_indices: {}, flags: Flags { icase: false, multiline: false, dot_all: false, no_opt: false, unicode: false } } }) }, reg_str: "^//.///.*$", include: None, exclude: None, category: CommonJS, request: "./locals" } [941] {main}"
`;

exports[`StatsTestCases should print correct stats for issue-3558 1`] = `
{
  "errors": [],
  "errorsCount": 0,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for issue-3558 2`] = `"rspack compiled successfully"`;

exports[`StatsTestCases should print correct stats for legacy-ie-css-warning 1`] = `
{
  "errors": [],
  "errorsCount": 0,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for legacy-ie-css-warning 2`] = `"rspack compiled successfully"`;

exports[`StatsTestCases should print correct stats for loader-builtin-swc-plugin-warn 1`] = `
{
  "errors": [],
  "errorsCount": 0,
  "warnings": [
    {
      "formatted": "Experimental plugins are not currently supported.
",
      "message": "Experimental plugins are not currently supported.",
    },
  ],
  "warningsCount": 1,
}
`;

exports[`StatsTestCases should print correct stats for loader-builtin-swc-plugin-warn 2`] = `
"Experimental plugins are not currently supported.


rspack compiled with 1 warning"
`;

exports[`StatsTestCases should print correct stats for minify-error-recovery 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ bundle.js:1:9
  │
1 │ const a {}
  │         ^ Expected a semicolon

",
      "message": "Expected a semicolon",
      "title": "JavaScript parsing error",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for minify-error-recovery 2`] = `
"error[javascript]: JavaScript parsing error
  ┌─ bundle.js:1:9
  │
1 │ const a {}
  │         ^ Expected a semicolon



rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for named-chunk-group 1`] = `
{
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 1080,
        },
      ],
      "assetsSize": 1080,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "namedChunkGroups": {
    "cimanyd": {
      "assets": [
        {
          "name": "cimanyd.bundle.js",
          "size": 135,
        },
      ],
      "assetsSize": 135,
      "chunks": [
        "cimanyd",
      ],
      "name": "cimanyd",
    },
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 1080,
        },
      ],
      "assetsSize": 1080,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for named-chunk-group 2`] = `
"Entrypoint main 1.05 KiB = bundle.js
Chunk Group cimanyd 135 bytes = cimanyd.bundle.js"
`;

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js

",
      "message": "Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
      "title": "Resolve error",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 2`] = `
"error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist in <PROJECT_ROOT>/tests/statsCases/normal-errors/index.js



rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "e1~runtime.js",
      ],
      "id": "e1~runtime",
      "initial": true,
      "names": [
        "e1~runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "e2~runtime.js",
      ],
      "id": "e2~runtime",
      "initial": true,
      "names": [
        "e2~runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "e1~runtime.js",
          "size": 2458,
        },
        {
          "name": "e1.js",
          "size": 392,
        },
      ],
      "assetsSize": 2850,
      "chunks": [
        "e1~runtime",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2~runtime.js",
          "size": 2458,
        },
        {
          "name": "e2.js",
          "size": 392,
        },
      ],
      "assetsSize": 2850,
      "chunks": [
        "e2~runtime",
        "e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "e1~runtime.js",
          "size": 2458,
        },
        {
          "name": "e1.js",
          "size": 392,
        },
      ],
      "assetsSize": 2850,
      "chunks": [
        "e1~runtime",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "e2~runtime.js",
          "size": 2458,
        },
        {
          "name": "e2.js",
          "size": 392,
        },
      ],
      "assetsSize": 2850,
      "chunks": [
        "e2~runtime",
        "e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk 2`] = `
"Entrypoint e1 2.78 KiB = e1~runtime.js 2.4 KiB e1.js 392 bytes
Entrypoint e2 2.78 KiB = e2~runtime.js 2.4 KiB e2.js 392 bytes
chunk {e1} e1.js (e1) [entry]
chunk {e1~runtime} e1~runtime.js (e1~runtime) [initial]
chunk {e2} e2.js (e2) [entry]
chunk {e2~runtime} e2~runtime.js (e2~runtime) [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e1.js",
      ],
      "id": "runtime~e1",
      "initial": true,
      "names": [
        "runtime~e1",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e2.js",
      ],
      "id": "runtime~e2",
      "initial": true,
      "names": [
        "runtime~e2",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "runtime~e1.js",
          "size": 2458,
        },
        {
          "name": "e1.js",
          "size": 386,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime~e1",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime~e2.js",
          "size": 2458,
        },
        {
          "name": "e2.js",
          "size": 386,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime~e2",
        "e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "runtime~e1.js",
          "size": 2458,
        },
        {
          "name": "e1.js",
          "size": 386,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime~e1",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime~e2.js",
          "size": 2458,
        },
        {
          "name": "e2.js",
          "size": 386,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime~e2",
        "e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-multiple 2`] = `
"Entrypoint e1 2.78 KiB = runtime~e1.js 2.4 KiB e1.js 386 bytes
Entrypoint e2 2.78 KiB = runtime~e2.js 2.4 KiB e2.js 386 bytes
chunk {e1} e1.js (e1) [entry]
chunk {e2} e2.js (e2) [entry]
chunk {runtime~e1} runtime~e1.js (runtime~e1) [initial]
chunk {runtime~e2} runtime~e2.js (runtime~e2) [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime.js",
      ],
      "id": "runtime",
      "initial": true,
      "names": [
        "runtime",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "runtime.js",
          "size": 2455,
        },
        {
          "name": "e1.js",
          "size": 389,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime.js",
          "size": 2455,
        },
        {
          "name": "e2.js",
          "size": 389,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime",
        "e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "runtime.js",
          "size": 2455,
        },
        {
          "name": "e1.js",
          "size": 389,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime.js",
          "size": 2455,
        },
        {
          "name": "e2.js",
          "size": 389,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime",
        "e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-single 2`] = `
"Entrypoint e1 2.78 KiB = runtime.js 2.4 KiB e1.js 389 bytes
Entrypoint e2 2.78 KiB = runtime.js 2.4 KiB e2.js 389 bytes
chunk {e1} e1.js (e1) [entry]
chunk {e2} e2.js (e2) [entry]
chunk {runtime} runtime.js (runtime) [initial]"
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 1`] = `
{
  "chunks": [
    {
      "entry": true,
      "files": [
        "e1.js",
      ],
      "id": "e1",
      "initial": true,
      "names": [
        "e1",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": true,
      "files": [
        "e2.js",
      ],
      "id": "e2",
      "initial": true,
      "names": [
        "e2",
      ],
      "size": 27,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e1.js",
      ],
      "id": "runtime~e1",
      "initial": true,
      "names": [
        "runtime~e1",
      ],
      "size": 0,
      "type": "chunk",
    },
    {
      "entry": false,
      "files": [
        "runtime~e2.js",
      ],
      "id": "runtime~e2",
      "initial": true,
      "names": [
        "runtime~e2",
      ],
      "size": 0,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "e1": {
      "assets": [
        {
          "name": "runtime~e1.js",
          "size": 2458,
        },
        {
          "name": "e1.js",
          "size": 386,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime~e1",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime~e2.js",
          "size": 2458,
        },
        {
          "name": "e2.js",
          "size": 386,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime~e2",
        "e2",
      ],
      "name": "e2",
    },
  },
  "errors": [],
  "namedChunkGroups": {
    "e1": {
      "assets": [
        {
          "name": "runtime~e1.js",
          "size": 2458,
        },
        {
          "name": "e1.js",
          "size": 386,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime~e1",
        "e1",
      ],
      "name": "e1",
    },
    "e2": {
      "assets": [
        {
          "name": "runtime~e2.js",
          "size": 2458,
        },
        {
          "name": "e2.js",
          "size": 386,
        },
      ],
      "assetsSize": 2844,
      "chunks": [
        "runtime~e2",
        "e2",
      ],
      "name": "e2",
    },
  },
}
`;

exports[`StatsTestCases should print correct stats for optimization-runtime-chunk-true 2`] = `
"Entrypoint e1 2.78 KiB = runtime~e1.js 2.4 KiB e1.js 386 bytes
Entrypoint e2 2.78 KiB = runtime~e2.js 2.4 KiB e2.js 386 bytes
chunk {e1} e1.js (e1) [entry]
chunk {e2} e2.js (e2) [entry]
chunk {runtime~e1} runtime~e1.js (runtime~e1) [initial]
chunk {runtime~e2} runtime~e2.js (runtime~e2) [initial]"
`;

exports[`StatsTestCases should print correct stats for parse-error 1`] = `
{
  "errors": [
    {
      "formatted": "error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>

",
      "message": "Expected ';', '}' or <eof>",
      "title": "JavaScript parsing error",
    },
  ],
  "errorsCount": 1,
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for parse-error 2`] = `
"error[javascript]: JavaScript parsing error
  ┌─ tests/statsCases/parse-error/b.js:6:8
  │
6 │ parser )
  │        ^ Expected ';', '}' or <eof>



rspack compiled with 1 error"
`;

exports[`StatsTestCases should print correct stats for reasons 1`] = `
{
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "847",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/reasons/a.js",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/reasons/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/reasons/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./a.js",
      "reasons": [
        {
          "moduleId": "10",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/reasons/index.js",
          "moduleName": "./index.js",
          "type": "cjs require",
          "userRequest": "./a",
        },
      ],
      "size": 55,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/reasons/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 44,
      "type": "module",
    },
  ],
}
`;

exports[`StatsTestCases should print correct stats for reasons 2`] = `
"./a.js [847] {main}
  cjs require ./a [10]
./index.js [10] {main}
  entry ./index"
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 725,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index",
            },
          ],
          "size": 51,
          "type": "module",
        },
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "280",
          "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/cycle-alias/a",
          "issuer": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "issuerId": "10",
          "issuerName": "./index.js",
          "issuerPath": [
            {
              "id": "10",
              "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
              "name": "./index.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/cycle-alias/a (missing)",
          "reasons": [
            {
              "moduleId": "10",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
              "moduleName": "./index.js",
              "type": "esm import",
              "userRequest": "cycle-alias/a",
            },
          ],
          "size": 160,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 211,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 725,
        },
      ],
      "assetsSize": 725,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias

",
      "message": "Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias",
      "title": "Resolve error",
    },
  ],
  "errorsCount": 1,
  "hash": "d881257a32aa70bceb9f",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 51,
      "type": "module",
    },
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "280",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-overflow/cycle-alias/a",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/cycle-alias/a (missing)",
      "reasons": [
        {
          "moduleId": "10",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js",
          "moduleName": "./index.js",
          "type": "esm import",
          "userRequest": "cycle-alias/a",
        },
      ],
      "size": 160,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 725,
        },
      ],
      "assetsSize": 725,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/resolve-overflow/dist",
  "publicPath": "auto",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-overflow 2`] = `
"PublicPath: auto
asset bundle.js 725 bytes {main} [emitted] (name: main)
Entrypoint main 725 bytes = bundle.js
chunk {main} bundle.js (main) [entry]
  ./index.js [10] {main}
    entry ./index
  <PROJECT_ROOT>/tests/statsCases/resolve-overflow/cycle-alias/a (missing) [280] {main}
    esm import cycle-alias/a [10]
./index.js [10] {main}
  entry ./index
<PROJECT_ROOT>/tests/statsCases/resolve-overflow/cycle-alias/a (missing) [280] {main}
  esm import cycle-alias/a [10]

error[internal]: Resolve error
  ┌─ tests/statsCases/resolve-overflow/index.js:1:1
  │
1 │ import { a } from "cycle-alias/a";
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Can't resolve "cycle-alias/a" in <PROJECT_ROOT>/tests/statsCases/resolve-overflow/index.js , maybe it had cycle alias



rspack compiled with 1 error (d881257a32aa70bceb9f)"
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 741,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index",
            },
          ],
          "size": 39,
          "type": "module",
        },
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "788",
          "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/pkg-a",
          "issuer": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "issuerId": "10",
          "issuerName": "./index.js",
          "issuerPath": [
            {
              "id": "10",
              "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
              "name": "./index.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/pkg-a (missing)",
          "reasons": [
            {
              "moduleId": "10",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
              "moduleName": "./index.js",
              "type": "esm import",
              "userRequest": "pkg-a",
            },
          ],
          "size": 160,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 199,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 741,
        },
      ],
      "assetsSize": 741,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [
    {
      "formatted": "Export should be relative path and start with "./", but got ../../index.js
",
      "message": "Export should be relative path and start with "./", but got ../../index.js",
      "title": "",
    },
  ],
  "errorsCount": 1,
  "hash": "d8057e887969080686e5",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 39,
      "type": "module",
    },
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "788",
      "identifier": "missing|<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/pkg-a",
      "issuer": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
      "issuerId": "10",
      "issuerName": "./index.js",
      "issuerPath": [
        {
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "name": "./index.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/pkg-a (missing)",
      "reasons": [
        {
          "moduleId": "10",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/index.js",
          "moduleName": "./index.js",
          "type": "esm import",
          "userRequest": "pkg-a",
        },
      ],
      "size": 160,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 741,
        },
      ],
      "assetsSize": 741,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for resolve-unexpected-exports-in-pkg 2`] = `
"PublicPath: (none)
asset bundle.js 741 bytes {main} [emitted] (name: main)
Entrypoint main 741 bytes = bundle.js
chunk {main} bundle.js (main) [entry]
  ./index.js [10] {main}
    entry ./index
  <PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/pkg-a (missing) [788] {main}
    esm import pkg-a [10]
./index.js [10] {main}
  entry ./index
<PROJECT_ROOT>/tests/statsCases/resolve-unexpected-exports-in-pkg/pkg-a (missing) [788] {main}
  esm import pkg-a [10]

Export should be relative path and start with "./", but got ../../index.js


rspack compiled with 1 error (d8057e887969080686e5)"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "emitted": true,
      "info": {
        "development": false,
        "hotModuleReplacement": false,
      },
      "name": "bundle.js",
      "size": 589,
      "type": "asset",
    },
  ],
  "assetsByChunkName": {
    "main": [
      "bundle.js",
    ],
  },
  "chunks": [
    {
      "children": [],
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "modules": [
        {
          "assets": [],
          "chunks": [
            "main",
          ],
          "id": "10",
          "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
          "issuerPath": [],
          "moduleType": "javascript/auto",
          "name": "./index.js",
          "reasons": [
            {
              "type": "entry",
              "userRequest": "./index",
            },
          ],
          "size": 26,
          "type": "module",
        },
      ],
      "names": [
        "main",
      ],
      "parents": [],
      "siblings": [],
      "size": 26,
      "type": "chunk",
    },
  ],
  "entrypoints": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 589,
        },
      ],
      "assetsSize": 589,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "errors": [],
  "errorsCount": 0,
  "hash": "88a79807adcdd74d05f9",
  "modules": [
    {
      "assets": [],
      "chunks": [
        "main",
      ],
      "id": "10",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "issuerPath": [],
      "moduleType": "javascript/auto",
      "name": "./index.js",
      "reasons": [
        {
          "type": "entry",
          "userRequest": "./index",
        },
      ],
      "size": 26,
      "type": "module",
    },
  ],
  "namedChunkGroups": {
    "main": {
      "assets": [
        {
          "name": "bundle.js",
          "size": 589,
        },
      ],
      "assetsSize": 589,
      "chunks": [
        "main",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/tests/statsCases/simple/dist",
  "publicPath": "",
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for simple 2`] = `
"PublicPath: (none)
asset bundle.js 589 bytes {main} [emitted] (name: main)
Entrypoint main 589 bytes = bundle.js
chunk {main} bundle.js (main) [entry]
  ./index.js [10] {main}
    entry ./index
./index.js [10] {main}
  entry ./index
rspack compiled successfully (88a79807adcdd74d05f9)"
`;

exports[`StatsTestCases should print correct stats for try-require--module 1`] = `
{
  "errors": [],
  "errorsCount": 0,
  "warnings": [
    {
      "formatted": "warning[internal]: Resolve error
  ┌─ tests/statsCases/try-require--module/index.js:2:5
  │  
2 │       require('./missing-module')
  │ ╭────────^
3 │ │ } catch (e) {
  │ ╰──^ Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require--module/index.js

",
      "message": "Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require--module/index.js",
    },
  ],
  "warningsCount": 1,
}
`;

exports[`StatsTestCases should print correct stats for try-require--module 2`] = `
"warning[internal]: Resolve error
  ┌─ tests/statsCases/try-require--module/index.js:2:5
  │  
2 │       require('./missing-module')
  │ ╭────────^
3 │ │ } catch (e) {
  │ ╰──^ Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require--module/index.js



rspack compiled with 1 warning"
`;

exports[`StatsTestCases should print correct stats for try-require-resolve-module 1`] = `
{
  "errors": [],
  "errorsCount": 0,
  "warnings": [
    {
      "formatted": "warning[internal]: Resolve error
  ┌─ tests/statsCases/try-require-resolve-module/index.js:2:5
  │  
2 │       require.resolve('./missing-module')
  │ ╭────────^
3 │ │ } catch (e) {
  │ ╰──^ Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require-resolve-module/index.js

",
      "message": "Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require-resolve-module/index.js",
    },
  ],
  "warningsCount": 1,
}
`;

exports[`StatsTestCases should print correct stats for try-require-resolve-module 2`] = `
"warning[internal]: Resolve error
  ┌─ tests/statsCases/try-require-resolve-module/index.js:2:5
  │  
2 │       require.resolve('./missing-module')
  │ ╭────────^
3 │ │ } catch (e) {
  │ ╰──^ Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require-resolve-module/index.js



rspack compiled with 1 warning"
`;

exports[`StatsTestCases should print correct stats for try-require-resolve-weak-module 1`] = `
{
  "errors": [],
  "errorsCount": 0,
  "warnings": [
    {
      "formatted": "warning[internal]: Resolve error
  ┌─ tests/statsCases/try-require-resolve-weak-module/index.js:2:5
  │  
2 │       require.resolveWeak('./missing-module')
  │ ╭────────^
3 │ │ } catch (e) {
  │ ╰──^ Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require-resolve-weak-module/index.js

",
      "message": "Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require-resolve-weak-module/index.js",
    },
  ],
  "warningsCount": 1,
}
`;

exports[`StatsTestCases should print correct stats for try-require-resolve-weak-module 2`] = `
"warning[internal]: Resolve error
  ┌─ tests/statsCases/try-require-resolve-weak-module/index.js:2:5
  │  
2 │       require.resolveWeak('./missing-module')
  │ ╭────────^
3 │ │ } catch (e) {
  │ ╰──^ Failed to resolve ./missing-module in <PROJECT_ROOT>/tests/statsCases/try-require-resolve-weak-module/index.js



rspack compiled with 1 warning"
`;
